<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingEnd="20dp"
              android:paddingStart="20dp"
              android:paddingTop="20dp"
              android:paddingBottom="20dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/contactPhotoDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:contentDescription="@string/TXT00001"
            android:minWidth="120dp"
            android:minHeight="120dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Large Text"
            android:id="@+id/contactNameDetail"
            android:paddingLeft="20dp"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:showDividers="end"
            android:paddingEnd="5dp"
            android:paddingStart="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/TXT00002"
                android:id="@+id/TXT00002"/>

            <RelativeLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New Text"
                    android:id="@+id/contactPhoneDetail"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_alignParentStart="true"
                />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/makeCall"
                    android:src="@android:drawable/stat_sys_phone_call"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/TXT00006"
                />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TXT00003"
                android:id="@+id/TXT00003"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <RelativeLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New Text"
                    android:id="@+id/contactEmailDetail"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_alignParentStart="true" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/sendEmail"
                    android:src="@android:drawable/sym_action_email"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/TXT00006"
                    />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TXT00004"
                android:id="@+id/TXT00004"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/contactCityDetail"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TXT00005"
                android:id="@+id/TXT00005"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/contactDescriptionDetail"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
